<resources>
    <string name="app_name">7Score</string>
    <string name="desired_league">Desired League :</string>
    <string name="mixed">Mixed</string>
    <string name="next">NEXT</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="go_all_in">GO ALL IN !</string>
    <string name="find_buddies_to_play_in_your_city">Find buddies to play in your city !</string>
    <string name="get_started">Get Started</string>
    <string name="background_image2">background image2</string>
    <string name="background_image3">background image3</string>
    <string name="i_am_a">I am a :</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="finish">FINISH</string>
    <string name="men_s">MEN\'S</string>
    <string name="women_s">WOMEN\'S</string>
</resources>
