<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/appbackground"
            android:id="@+id/appbackground" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" android:visibility="visible" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="141dp"
            android:layout_height="110dp" app:srcCompat="@drawable/applogo"
            android:id="@+id/applogo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:id="@+id/sonetone"
            android:textSize="36sp" android:textColor="@android:color/black" android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/applogo" app:layout_constraintHorizontal_bias="0.517"
            android:textAlignment="center" android:visibility="visible" android:text="@string/go_all_in"/>
    <TextView
            android:layout_width="188dp"
            android:layout_height="50dp"
            android:id="@+id/sonettwo"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/sonetone" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:textAlignment="center" android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/black" android:singleLine="false"
            android:visibility="visible" android:text="@string/find_buddies_to_play_in_your_city"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/startbutton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="55dp" app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
            android:textStyle="bold" android:fontFamily="sans-serif" android:textColor="@color/colorPrimary"
            android:background="@drawable/score7_button"/>
</android.support.constraint.ConstraintLayout>