<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SecondActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/background2"
            android:id="@+id/backgroundtwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image2"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="176dp"
            android:layout_height="35dp"
            android:id="@+id/stwotone" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="50dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white" android:textSize="18sp" android:textAlignment="center"
            android:fontFamily="sans-serif" android:textStyle="bold"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/stwotone" android:layout_marginTop="160dp"
            android:layout_width="0dp" android:id="@+id/buttonsLayout">
        <ToggleButton
                android:text="@string/men_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="299dp"
                tools:layout_editor_absoluteX="161dp" android:id="@+id/menButton"
                android:fontFamily="sans-serif" android:textAlignment="center"
                android:textColor="@android:color/white" android:textOff="MEN'S" android:textOn="MEN'S"
                android:background="@drawable/score7_toggle" android:textStyle="bold" android:textSize="18sp"
                android:onClick="onMenClicked"/>
        <ToggleButton
                android:text="@string/women_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womenButton" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:fontFamily="sans-serif" android:textAlignment="center"
                android:textColor="@android:color/white" android:textOff="WOMEN'S" android:textOn="WOMEN'S"
                android:background="@drawable/score7_toggle" android:textSize="18sp" android:textStyle="bold"
                android:onClick="onWomenClicked"/>
        <ToggleButton
                android:text="@string/mixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/mixedButton" android:fontFamily="sans-serif"
                android:textAlignment="center" android:textColor="@android:color/white" android:textOff="@string/mixed"
                android:textOn="@string/mixed" android:background="@drawable/score7_toggle" android:textSize="18sp"
                android:textStyle="bold" android:onClick="onMixedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundtwo" android:background="@drawable/score7_button"
            android:textSize="18sp" android:textColor="@android:color/white" android:textStyle="bold"
            android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>