<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.ThirdActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/bgnd"
            android:id="@+id/backgroundthree" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image3"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="112dp"
            android:layout_height="42dp"
            android:id="@+id/sthreetone" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:fontFamily="sans-serif"
            android:textSize="21sp" android:textColor="@android:color/white" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginTop="64dp" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="383dp"
            android:layout_height="54dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="130dp"
            app:layout_constraintTop_toBottomOf="@+id/sthreetone">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/beginnerbtn" android:layout_weight="1"
                android:layout_marginRight="8dp" android:textOff="Beginner" android:textOn="Beginner"
                android:textColor="@android:color/white" android:background="@drawable/score7_toggle"
                android:textSize="18sp" android:onClick="onBeginnerClicked"/>
        <ToggleButton
                android:text="@string/expert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/expertbtn" android:layout_weight="1"
                android:layout_marginLeft="8dp" android:textOff="Expert" android:textOn="@string/expert"
                android:textColor="@android:color/white" android:background="@drawable/score7_toggle"
                android:textAlignment="center" android:textSize="18sp" android:onClick="onExpertClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishbutton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textStyle="bold"
            android:textAlignment="center" android:textColor="@android:color/white"
            android:background="@drawable/score7_button" android:onClick="onFinishClicked"/>
</android.support.constraint.ConstraintLayout>